# accounting-app

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_WIKI.md  README.md  dev.mjs  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.bak  vite.config.ts
.claude/: settings.json  settings.local.json
database/: app_data_sync.db  app_data_sync.db-info  app_data_sync.db-shm  app_data_sync.db-wal
doc/: 01-requirement-design.md  02-architecture-design.md  03-ui-design.md  04-development-plan.md  05-refactoring-plan.md  06-agent-refactoring-plan.md  07-local-llm-plan.md
docs/: 01-project-overview.md  01-项目概览.md  02-development-roadmap.md  02-开发路线图.md  03-active-design-docs.md  03-活跃设计文档.md  AI Chat 流程图.canvas  CODE_WIKI.md
scripts/: README.md  check_fields.py  dev.mjs  (+6 more)
src-tauri/: Cargo.toml  OCR_SETUP.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: dispatch.md  preferences.md  record.md
src-tauri/scripts/: download_models.sh  ocr_service.py  python_manager.ps1  python_manager.sh
src-tauri/src/: logger.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  learning.rs  mod.rs  ocr.rs  prompts.rs  records.rs  stats.rs  sync.rs  trips.rs
src-tauri/src/db/: chat_history.rs  connection.rs  learning.rs  mod.rs  preferences.rs  prompts.rs  records.rs  schema.rs  sync_log.rs  trips.rs
src-tauri/src/db/nocobase/: client.rs  learning_sync.rs  mod.rs  pull.rs  push.rs  trip_sync.rs
src-tauri/src/models/: mod.rs
src-tauri/src/ocr/: mod.rs  rapidocr.rs
(+112 files in other folders)
