[package]
name = "accounting-app"
version = "0.1.0"
description = "AI 记账桌面应用"
authors = ["SZD"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql = { version = "0.9", features = ["core", "replication", "remote"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"

[features]

[build-dependencies]
tauri-build = { version = "2", features = [] }
